--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.1rem;
+}
+
 .flex{
     display: flex;
 }
@@ -45,9 +50,15 @@
     background-color: #d2d2d2;
 }
 
+.btn {
+    padding: .5rem 1rem;
+    border: none;
+    border-radius: 1.2rem;
+}
 
 header{
-    background-color: #add8e6;
+    background-color: #3161e0;
+    color: white;
     align-items: center;
     /* height: 80px; */
     flex-direction: column;
@@ -69,7 +80,7 @@ main section.king {
 
 
 nav.header-top{
-    height: 45px;
+    /* height: 45px; */
     margin: 1rem;
     /* line-height: 40px; */
 }
@@ -77,23 +88,30 @@ nav.header-top{
 nav div.logo,
 nav div.login{
     flex-basis: 20%;
-    /* width: 20%; */
-    background-color: orange;
-    padding:.75rem;
+    /* background-color: orange; */
+    padding:.5rem 0;
+}
 
+nav div.login {
+    text-align: end;
 }
 
 nav ul.main-menu{
     flex-basis: 80%;
-    background-color: orange;
+    /* background-color: orange; */
     padding:.75rem;
     text-align: center;
 }
 
 nav ul.main-menu li{
     display: inline;
+    margin: 1rem;
 }
 
+.login-btn {
+    color: black;
+    background-color: white;
+}
 
 div.big-content{
     background-color: #228a22;
