--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
     padding: 0 4.5rem;
 }
 
-.small-col>h2 {
+h2 {
     line-height: 2.5rem;
     font-size: 2rem;
 }
@@ -128,9 +128,37 @@ nav ul.main-menu li{
 }
 
 div.big-content{
-    background-color: #228a22;
-    height: 800px;
+    /* background-color: #228a22; */
+    /* height: 800px; */
     width: 100%;
+    text-align: center;
+}
+
+.stars {
+    background-image: url("../img/stars.svg");
+    height: 3rem;
+    width: calc(100% - 18rem);
+    background-repeat: no-repeat;
+    margin-left: 20rem;
+}
+
+.big-content>h2 {
+    padding-bottom: 1.5rem;
+}
+
+.big-content>p {
+    padding: 0 9rem;
+}
+
+.btn-download-big {
+    background-color: #8ea1e1;
+    color: white;
+    margin-top: 2rem;
+}
+
+#start {
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 footer{
